--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,14 @@
 
 <p-sidebar [(visible)]="display">
   <div class="sidebar">
-    <div class="sidebar-brand">
-      <h2 (click)="router.navigate(['/offres'])" style="cursor: pointer;"><span class="las la-chess"></span>KamJobs</h2>
+    <div class="sidebar-brand p-justify-between">
+      <h2 (click)="router.navigate(['/offres'])" class="kamjobs">KamJobs</h2>
+      <div >
+        <button pButton pRipple type="button" (click)="display = false"
+              icon="pi pi-times" class="p-button-rounded  p-button-text button-white"></button>
+      </div>
     </div>
+    
     <div class="sidebar-menu">
       <ul>
         <li><a routerLinkActive="active" [routerLink]="['/admin/dashboard']" ><span class="las la-igloo"></span><span>Dashboard</span></a></li>
@@ -19,7 +24,7 @@
 
   <div class="main-content">
     <header>
-      <h2 (click)="display = true">
+      <h2 (click)="display = true" class="kamjobs">
         <label for="">
           <span class="las la-bars"></span>
         </label>
