--- a/src/app/admin/dashboard/dashboard.component.css
+++ b/src/app/admin/dashboard/dashboard.component.css
@@ -11,21 +11,31 @@
   box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .sidebar{
   width: 345px;
   position: fixed;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   left: 0;
   top: 0;
   height: 100%;
-  background-color: #00A4E5;
+  background-color: #00a2ff;
   z-index: 100;
 }
-.main-content{
-  margin-left: 345px;
-}
 
+.kamjobs{
+  width: fit-content;
+  cursor: pointer;
+  text-align: center;
+}
+.kamjobs:hover{
+  width: fit-content;
+  cursor: pointer;
+  transform: scale(1.05);
+  text-align: center;
+}
 .sidebar-brand {
   height: 90px;
   padding: 1rem 0rem 1rem 2rem;
@@ -58,19 +68,19 @@
   background: white;
   padding-top: 1rem ;
   padding-bottom: 1rem;
-  color: #00A4E5;
+  color: #00a2ff;
   border-radius: 30px 0px 0px 30px;
 }
 
 header{
   display: flex;
   justify-content: space-between;
+  border-radius: 0px 20px;
   padding: 1rem 1.5rem;
   box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+  background-color: white;
   position: fixed;
-  background-color: #ffffff;
-  left: 345px;
-  width: calc(100% - 345px);
+  width: 100%;
   top: 0;
   z-index: 100;
 }
@@ -129,6 +139,8 @@ header label span {
 }
 
 main {
+  background-color: #00a2ff;
+  border-radius: 20px;
   margin-top: 80px;
   padding: 2rem 1.5rem;
   min-height: calc(100vh - 90px);
@@ -146,15 +158,21 @@ main {
   justify-content: space-between;
   background: white;
   padding: 2rem;
-  border-radius: 2px;
+  border-radius: 20px;
 }
 
-.card-single div:last-child span{
-  font-size: 3rem;
-  color: #00A4E5;
 
+
+.p-justify-between {
+  display: flex;
+  justify-content:space-between;
 }
 
-.card-single div:last-child span{
-  color: #8390A2;
+.p-justify-right {
+  display: flex;
+  justify-content:flex-end;
+}
+.button-white{
+  margin: 3px;
+  color: white;
 }
