--- a/src/app/pages/blog-form/blog-form.component.css
+++ b/src/app/pages/blog-form/blog-form.component.css
@@ -154,3 +154,25 @@ button.big-button:active::before {
   box-shadow: 0 0 0 2px #10B4F5, 0 0.25em 0 0 #07ABEC;
 
 }
+
+.flex-container {
+  width: 80vvw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+  margin-top: 1rem;
+}
+
+.card-single {
+  background: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 30px;
+  padding: 2rem;
+  border-radius: 30px;
+}
