--- a/src/app/pages/employeur/home/home.component.css
+++ b/src/app/pages/employeur/home/home.component.css
@@ -17,14 +17,25 @@
 .sidebar{
   width: 345px;
   position: fixed;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   left: 0;
   top: 0;
   height: 100%;
-  background-color: #00A4E5;
+  background-color: #00a2ff;
   z-index: 100;
 }
 
-
+.kamjobs{
+  width: fit-content;
+  cursor: pointer;
+  text-align: center;
+}
+.kamjobs:hover{
+  width: fit-content;
+  cursor: pointer;
+  transform: scale(1.05);
+  text-align: center;
+}
 .sidebar-brand {
   height: 90px;
   padding: 1rem 0rem 1rem 2rem;
@@ -57,13 +68,14 @@
   background: white;
   padding-top: 1rem ;
   padding-bottom: 1rem;
-  color: #00A4E5;
+  color: #00a2ff;
   border-radius: 30px 0px 0px 30px;
 }
 
 header{
   display: flex;
   justify-content: space-between;
+  border-radius: 0px 20px;
   padding: 1rem 1.5rem;
   box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
   background-color: white;
@@ -83,7 +95,7 @@ header{
 }
 
 .search-wrapper input {
-  height: 100%;
+ height: 100%;
   padding: .5rem;
   border: none;
   outline: none;
@@ -111,7 +123,7 @@ header{
 }
 
 /*.user-wrapper h4 {*/
-/*margin-bottom: 0rem !important;*/
+  /*margin-bottom: 0rem !important;*/
 /*}*/
 
 .sidebar-menu {
@@ -127,6 +139,8 @@ header label span {
 }
 
 main {
+  background-color: #00a2ff;
+  border-radius: 20px;
   margin-top: 80px;
   padding: 2rem 1.5rem;
   min-height: calc(100vh - 90px);
@@ -156,4 +170,17 @@ main {
 .card-single div:last-child span{
   color: #8390A2;
 }
-  
+
+.p-justify-between {
+  display: flex;
+  justify-content:space-between;
+}
+
+.p-justify-right {
+  display: flex;
+  justify-content:flex-end;
+}
+.button-white{
+  margin: 3px;
+  color: white;
+}
