--- a/src/app/pages/employeur/welcome/welcome.component.html
+++ b/src/app/pages/employeur/welcome/welcome.component.html
@@ -1,4 +1,3 @@
-
 <p-toast></p-toast>
 
 <div class="all">
@@ -6,44 +5,51 @@
   <form class="box">
     <div class="p-fluid p-formgrid p-grid ">
       <!--<div class="p-field p-col-12 p-md-6 ">-->
-        <!--<label for="genre">Genre d'offre</label>-->
-        <!--<input id="genre" type="text" pInputText [(ngModel)]="offre.genre" name="genre" #genre="ngModel" required pTooltip="Taper le genre d'emploi" tooltipPosition="top" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
+      <!--<label for="genre">Genre d'offre</label>-->
+      <!--<input id="genre" type="text" pInputText [(ngModel)]="offre.genre" name="genre" #genre="ngModel" required pTooltip="Taper le genre d'emploi" tooltipPosition="top" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
       <!--</div>-->
-      <div class="p-field p-col-12 p-md-6">
-        <label for="genre">Genre d'offre</label>
-        <div class="p-field p-col-12 p-md-3">
-          <p-dropdown [options]="genres" [(ngModel)]="offre.genre" placeholder="Choisissez le genre d'employé" name="genre" id="genre"  [style]="{'minWidth': '14rem'}"></p-dropdown>
-        </div>
-      </div>
+      
 
       <div class="p-field p-col-12 p-md-6 ">
         <label for="nom_emploi">Nom d'offre</label>
-        <input id="nom_emploi" type="text" pInputText [(ngModel)]="offre.nom_emploi" name="nom_emploi" #genre="ngModel" required pTooltip="Taper le nom d'emploi" tooltipPosition="top" tooltipEvent="focus" showDelay="1000" hideDelay="500">
+        <input id="nom_emploi" type="text" pInputText [(ngModel)]="offre.nom_emploi" name="nom_emploi" #genre="ngModel"
+          required pTooltip="Taper le nom d'emploi" tooltipPosition="top" tooltipEvent="focus" showDelay="1000"
+          hideDelay="500">
       </div>
 
+      <div class="p-field p-col-12 p-md-6">
+        <label for="genre">Genre d'offre</label>
+        <div class="p-field p-col-12 p-md-3">
+          <p-dropdown [options]="genres" [(ngModel)]="offre.genre" placeholder="Choisissez le genre d'employé"
+            name="genre" id="genre" [style]="{'minWidth': '14rem'}"></p-dropdown>
+        </div>
+      </div>
       <!--<div class="p-field p-col-12 p-md-6 p-input-icon-right">-->
-        <!--<label for="experience">Experience exigé</label>-->
-        <!--<input id="experience" type="text" pInputText [(ngModel)]="offre.experience" name="experience" #experience="ngModel" required pTooltip="Taper l'experience voulu" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500" >-->
+      <!--<label for="experience">Experience exigé</label>-->
+      <!--<input id="experience" type="text" pInputText [(ngModel)]="offre.experience" name="experience" #experience="ngModel" required pTooltip="Taper l'experience voulu" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500" >-->
       <!--</div>-->
 
       <div class="p-field p-col-12 p-md-6">
         <label for="genre">Experience exigé</label>
         <div class="p-field p-col-12 p-md-3">
-          <p-dropdown id="experience"  [options]="experiences" [(ngModel)]="offre.experience" placeholder="Choisissez l'expérience " name="experience" [style]="{'minWidth': '14rem'}"></p-dropdown>
+          <p-dropdown id="experience" [options]="experiences" [(ngModel)]="offre.experience"
+            placeholder="Choisissez l'expérience " name="experience" [style]="{'minWidth': '14rem'}"></p-dropdown>
         </div>
       </div>
 
 
       <!--<div class="p-field p-col-12 p-md-6">-->
-        <!--<label for="niveau_education">Niveau Education</label>-->
-        <!--<input id="niveau_education" type="text"  pInputText width="50px" [(ngModel)]="offre.niveau_education" name="niveau_education" #niveau_education="ngModel" required pTooltip="Taper le niveau d'éducation voulu" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
+      <!--<label for="niveau_education">Niveau Education</label>-->
+      <!--<input id="niveau_education" type="text"  pInputText width="50px" [(ngModel)]="offre.niveau_education" name="niveau_education" #niveau_education="ngModel" required pTooltip="Taper le niveau d'éducation voulu" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
       <!--</div>-->
 
 
       <div class="p-field p-col-12 p-md-6">
         <label for="niveau_education">Niveau Education</label>
         <div class="p-field p-col-12 p-md-3">
-          <p-dropdown id="niveau_education"  [options]="niveau_education" [(ngModel)]="offre.niveau_education" placeholder="Choisissez le niveau d'education" name="niveau_education" [style]="{'minWidth': '14rem'}"></p-dropdown>
+          <p-dropdown id="niveau_education" [options]="niveau_education" [(ngModel)]="offre.niveau_education"
+            placeholder="Choisissez le niveau d'education" name="niveau_education" [style]="{'minWidth': '14rem'}">
+          </p-dropdown>
         </div>
       </div>
 
@@ -51,40 +57,50 @@
 
       <div class="p-field p-col-12 p-md-3">
         <label for="description_emploi">Description Emploi</label>
-        <textarea id="description_emploi" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize" [(ngModel)]="offre.description_emploi" name="description_emploi" #description_emploi="ngModel" required pTooltip="Taper la description complete de cet offre " tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500"></textarea>
+        <textarea id="description_emploi" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize"
+          [(ngModel)]="offre.description_emploi" name="description_emploi" #description_emploi="ngModel" required
+          pTooltip="Taper la description complete de cet offre " tooltipPosition="right" tooltipEvent="focus"
+          showDelay="1000" hideDelay="500"></textarea>
         <!--<input id="desc" type="text" pInputText [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required>-->
       </div>
 
       <div class="p-field p-col-12 p-md-3">
         <label for="exigence_emploi">Exigence Emploi</label>
-        <textarea id="exigence_emploi" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize" [(ngModel)]="offre.exigence_emploi" name="exigence_emploi" #exigence_emploi="ngModel" required pTooltip="Taper tous les exigences voulu par les candidats" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500"></textarea>
+        <textarea id="exigence_emploi" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize"
+          [(ngModel)]="offre.exigence_emploi" name="exigence_emploi" #exigence_emploi="ngModel" required
+          pTooltip="Taper tous les exigences voulu par les candidats" tooltipPosition="right" tooltipEvent="focus"
+          showDelay="1000" hideDelay="500"></textarea>
         <!--<input id="desc" type="text" pInputText [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required>-->
       </div>
 
       <div class="p-field p-col-12 p-md-3">
         <label for="secteur">Domaine</label>
-        <p-dropdown id="secteur" [options]="secteurs" [(ngModel)]="selected_secteur" placeholder="Choisissez un secteur d'activités" name="secteur" optionLabel="secteur"[style]="{'minWidth': '14rem'}"></p-dropdown>
+        <p-dropdown id="secteur" [options]="secteurs" [(ngModel)]="selected_secteur"
+          placeholder="Choisissez un secteur d'activités" name="secteur" optionLabel="secteur"
+          [style]="{'minWidth': '14rem'}"></p-dropdown>
       </div>
 
       <!--<div class="p-field p-col-12 p-md-6">-->
-        <!--<label for="secteur">Domaine</label>-->
-        <!--<div class="p-field p-col-12 p-md-3">-->
-          <!--<p-dropdown id="secteur"  [options]="secteurs" [(ngModel)]="offre.domaine" placeholder="Choisissez un secteur d'activités" name="secteur" [style]="{'minWidth': '14rem'}"></p-dropdown>-->
-        <!--</div>-->
+      <!--<label for="secteur">Domaine</label>-->
+      <!--<div class="p-field p-col-12 p-md-3">-->
+      <!--<p-dropdown id="secteur"  [options]="secteurs" [(ngModel)]="offre.domaine" placeholder="Choisissez un secteur d'activités" name="secteur" [style]="{'minWidth': '14rem'}"></p-dropdown>-->
+      <!--</div>-->
       <!--</div>-->
 
 
-        <!--<input id="emploiTypes" type="text"  pInputText width="50px" [(ngModel)]="offre.domaine" name="emploiTypes" #emploiTypes="ngModel" required pTooltip="Taper le type d'emploi" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
+      <!--<input id="emploiTypes" type="text"  pInputText width="50px" [(ngModel)]="offre.domaine" name="emploiTypes" #emploiTypes="ngModel" required pTooltip="Taper le type d'emploi" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
 
 
       <div class="p-field p-col-12 p-md-6">
         <label for="type_offre">Types d'emploi</label>
-        <p-multiSelect id="type_offre" [options]="offre_types" [(ngModel)]="selected_types" name="type_offre" defaultLabel="Selectioner les types d'offres voulu" optionLabel="emploi_type" display="chip"></p-multiSelect>
+        <p-multiSelect id="type_offre" [options]="offre_types" [(ngModel)]="selected_types" name="type_offre"
+          defaultLabel="Selectioner les types d'offres voulu" optionLabel="emploi_type" display="chip"></p-multiSelect>
       </div>
 
       <div class="p-field p-col-12 p-md-6">
         <label for="langue">Langues Exigées</label>
-        <p-multiSelect id="langue" [options]="langues" [(ngModel)]="selected_langues" name="langue" defaultLabel="Selectioner les langues voulu" optionLabel="langue" display="chip"></p-multiSelect>
+        <p-multiSelect id="langue" [options]="langues" [(ngModel)]="selected_langues" name="langue"
+          defaultLabel="Selectioner les langues voulu" optionLabel="langue" display="chip"></p-multiSelect>
       </div>
 
 
@@ -92,8 +108,8 @@
 
 
       <!--<div class="p-field p-col-12">-->
-        <!--<label for="mdp">Mot de passe</label>-->
-        <!--<p-password id="mdp" type="text" rows="1" [(ngModel)]="employeur.mot_de_passe" name="mdp" #mdp="ngModel" required [toggleMask]="true" ></p-password>-->
+      <!--<label for="mdp">Mot de passe</label>-->
+      <!--<p-password id="mdp" type="text" rows="1" [(ngModel)]="employeur.mot_de_passe" name="mdp" #mdp="ngModel" required [toggleMask]="true" ></p-password>-->
       <!--</div>-->
       <!--<div class="p-field p-col-12">-->
       <!--<label for="mdp2">Mot de passe Confirmation</label>-->
@@ -101,39 +117,39 @@
       <!--</div>-->
 
       <!--<div class="p-field p-col-12">-->
-        <!--<label for="logo">Logo</label>-->
-        <!--<input id="logo" type="text" rows="1" pInputText [(ngModel)]="employeur.logo" name="logo" #logo="ngModel" required pTooltip="Taper le url de img" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
+      <!--<label for="logo">Logo</label>-->
+      <!--<input id="logo" type="text" rows="1" pInputText [(ngModel)]="employeur.logo" name="logo" #logo="ngModel" required pTooltip="Taper le url de img" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
       <!--</div>-->
 
 
       <!--<div class="p-field p-col-12 p-md-6">-->
-        <!--<label for="code">Matricule fiscale-->
-        <!--</label>-->
-        <!--<input id="code" type="text" pInputText aria-describedby="username-help" [(ngModel)]="employeur.matricule" name="code" #code="ngModel" required pTooltip="La matricule doit être existante" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
+      <!--<label for="code">Matricule fiscale-->
+      <!--</label>-->
+      <!--<input id="code" type="text" pInputText aria-describedby="username-help" [(ngModel)]="employeur.matricule" name="code" #code="ngModel" required pTooltip="La matricule doit être existante" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
       <!--</div>-->
       <!--<div class="p-field p-col-12 p-md-3">-->
-        <!--<label for="site">site web</label>-->
-        <!--<input id="site" type="text" rows="1" pInputText [(ngModel)]="employeur.site_web" name="site" #site="ngModel" required>-->
+      <!--<label for="site">site web</label>-->
+      <!--<input id="site" type="text" rows="1" pInputText [(ngModel)]="employeur.site_web" name="site" #site="ngModel" required>-->
       <!--</div>-->
       <!--<div class="p-field p-col-12 p-md-3">-->
-        <!--<label for="telephone">telephone</label>-->
-        <!--<input type="number" id="telephone" pInputText [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
-        <!--&lt;!&ndash;<input id="telephone" type="number" pInputText min="71000000" [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">&ndash;&gt;-->
+      <!--<label for="telephone">telephone</label>-->
+      <!--<input type="number" id="telephone" pInputText [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
+      <!--&lt;!&ndash;<input id="telephone" type="number" pInputText min="71000000" [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">&ndash;&gt;-->
       <!--</div>-->
       <!--<div class="p-field p-col-12 p-md-3">-->
-        <!--<label for="desc">Description Entreprise</label>-->
-        <!--<textarea id="desc" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize" [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required></textarea>-->
-        <!--&lt;!&ndash;<input id="desc" type="text" pInputText [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required>&ndash;&gt;-->
-      <!--</div>-->
-
-      <!--<div class="p-field p-col-12 p-md-3">-->
-        <!--<p-dropdown [options]="secteurs" [(ngModel)]="employeur.secteur_id" placeholder="Choisissez un secteur d'activités" id="secteur" name="secteur" optionLabel="secteur"[style]="{'minWidth': '14rem'}"></p-dropdown>-->
+      <!--<label for="desc">Description Entreprise</label>-->
+      <!--<textarea id="desc" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize" [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required></textarea>-->
+      <!--&lt;!&ndash;<input id="desc" type="text" pInputText [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required>&ndash;&gt;-->
       <!--</div>-->
 
+      <!--<div class="p-field p-col-12 p-md-3">-->
+      <!--<p-dropdown [options]="secteurs" [(ngModel)]="employeur.secteur_id" placeholder="Choisissez un secteur d'activités" id="secteur" name="secteur" optionLabel="secteur"[style]="{'minWidth': '14rem'}"></p-dropdown>-->
+      <!--</div>-->
+
 
 
       <!--<div class="p-field p-col-12 p-md-3">-->
-        <!--<p-dropdown [options]="langue" [(ngModel)]="langue.langue" placeholder="Choisissez un secteur d'activités" id="langue" name="langue" optionLabel="langue"[style]="{'minWidth': '14rem'}"></p-dropdown>-->
+      <!--<p-dropdown [options]="langue" [(ngModel)]="langue.langue" placeholder="Choisissez un secteur d'activités" id="langue" name="langue" optionLabel="langue"[style]="{'minWidth': '14rem'}"></p-dropdown>-->
       <!--</div>-->
 
 
@@ -162,5 +178,5 @@
     </div>
   </form>
 
-  <button class="big-button"  (click)="Ajouter()" [disabled]="genre.invalid">Ajouter</button>
+  <button class="big-button" (click)="Ajouter()" [disabled]="genre.invalid">Ajouter</button>
 </div>
