--- a/src/app/pages/gestion-cv/gestion-cv.component.css
+++ b/src/app/pages/gestion-cv/gestion-cv.component.css
@@ -51,13 +51,77 @@
 }
 
 @media (max-width: 1400px) {
+  .c {
+      width: 80vw;
+    }
+}
+@media (max-width: 950px) {
     .c {
-        width: 80vw;
+        width: 88vw;
       }
 }
 
+@media (max-width: 500px) {
+  .c {
+      width: 96vw;
+    }
+}
+
 .p-justify-between {
-  margin-top: 20px;
   display: flex;
   justify-content:space-between;
+}
+
+.p-justify-right {
+  display: flex;
+  justify-content:flex-end;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.size {
+  width: 49.5%;
+}
+/* Responsive layout - makes a one column layout instead of a two-column layout */
+@media (max-width: 1000px) {
+  
+  .flex-container {
+    flex-direction: column;
+  }
+  .size {
+    width: 100%;
+  }
+}
+
+.margin-top{
+  margin-top: 20px;
+}
+
+.main {
+  background-image:url("../../../assets/apps.46003.14259451864568504.ad5e5d07-0fbb-46ed-b9b6-a1b781645691.jpg");
+  border-radius: 20px;
+  margin-top: 10px;
+  padding: 2rem 1.5rem;
+  min-height: calc(100vh - 90px);
+}
+
+.card-single {
+  background: rgba(255, 255, 255, 0.74);
+  backdrop-filter: blur(80px);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 30px;
+  height: calc(100vh - 120px);
+  padding: 2rem;
+  border-radius: 30px;
+}
+
+
+.flex-container {
+  width: 80vvw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-evenly;
 }
