--- a/src/app/pages/gestion-cv/gestion-experience/gestion-experience.component.html
+++ b/src/app/pages/gestion-cv/gestion-experience/gestion-experience.component.html
@@ -1,1 +1,185 @@
-<p>gestion-experience works!</p>
+<!-- DIALOG FOR MODIFYING EXPERIENCES -->
+<p-dialog header="Ajout test" [modal]="true" [draggable]="false" [modal]="true" [(visible)]="modif_experience.selected">
+  <div class="dialog">
+    <form>
+      <div class="p-fluid p-formgrid p-grid">
+        <div class="p-field p-col-12 p-md-6 flex-cont p-justify-between">
+          <div class="size">
+            <div class="p-field p-col-12 p-md-6 margin-top">
+              <div>
+                <label for="nom">Nom de la Société</label>
+                <input id="nom" type="text" pInputText [(ngModel)]="modif_experience.nom_entreprise" name="nom" required
+                  #nom="ngModel" [ngClass]="{'ng-dirty': (nom.dirty && nom.invalid)}">
+                <small class="p-error" *ngIf="(nom.dirty && nom.invalid)">Nom de la société est
+                  requis.</small>
+              </div>
+            </div>
+
+            <div class="p-field p-col-12 p-md-6 margin-top">
+              <div>
+                <label for="poste">Poste de travail</label>
+                <input id="poste" type="text" pInputText [(ngModel)]="modif_experience.poste" name="poste"
+                  #poste="ngModel" required [ngClass]="{'ng-dirty': (poste.dirty && poste.invalid)}">
+                <small class="p-error" *ngIf="(poste.dirty && poste.invalid)">Nom de la poste de travail est
+                  requis.</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="size margin-top">
+            <label for="desc">Description de l'expérience</label>
+            <textarea id="desc" [rows]="5" [cols]="30" pInputTextarea autoResize="autoResize"
+              [(ngModel)]="modif_experience.description" name="desc" #desc="ngModel"></textarea>
+          </div>
+        </div>
+
+        <div class="p-field-checkbox margin-top">
+          <input type="checkbox" id="en_cours" [(ngModel)]="modif_experience.en_cours" (change)="nullifyDateFinModif()"
+            [checked]="modif_experience.en_cours" name="en_cours" #en_cours="ngModel" />
+          <label for="en_cours">Je travaille encore sur cette poste.</label>
+        </div>
+
+        <div class="p-field p-col-12 p-md-6 p-justify-between">
+          <div style="width: 50%;">
+            <label for="date_debut">Date début</label>
+            <input #date_debut="ngModel" id="date_debut" name="date_debut" type="date" (change)="checkDate()" required
+              pInputText [(ngModel)]="modif_experience.date_debut"
+              [ngClass]="{'ng-dirty': (date_debut.dirty && date_debut.invalid)}">
+            <small class="p-error" *ngIf="(date_debut.dirty && date_debut.invalid)">date début est
+              requis.</small>
+          </div>
+
+          <div style="width: 49%;" *ngIf="(!modif_experience.en_cours)">
+            <label for="date_fin">Date fin</label>
+            <input #date_fin="ngModel" id="date_fin" name="date_fin" [disabled]="modif_experience.date_debut==null"
+              min="{{modif_experience.date_debut | date: 'yyyy-MM-dd'}}" type="date" required pInputText
+              [(ngModel)]="modif_experience.date_fin" [ngClass]="{'ng-dirty': (date_debut.dirty && date_fin.invalid)}"
+              onkeypress="return false">
+            <small>Appuyez sur l'icône du calendrier à droite</small>
+            <small class="p-error" *ngIf="(date_fin.dirty && date_fin.invalid)">date fin est requis.</small>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-justify-right margin-top">
+        <button pButton pRipple type="button" (click)="modifierExperience()" label="Modifier" icon="pi pi-check"
+          [disabled]="nom.invalid || poste.invalid || date_debut.invalid || (modif_experience.en_cours==false && modif_experience.date_fin==null)"
+          class="p-button-text p-button-rounded"></button>
+        <button pButton pRipple type="button" (click)="cancel()" label="Annuler" icon="pi pi-times"
+          class="p-button-text p-button-rounded p-button-danger"></button>
+      </div>
+    </form>
+  </div>
+</p-dialog>
+
+<div class="main">
+  <h1>
+    Gestion Experiences
+  </h1>
+
+
+  <div class="flex-cont">
+    <div *ngFor="let exp of experiences" class="card-single">
+      <h3>
+        {{exp.poste}} au seins de {{exp.nom_entreprise}}
+      </h3>
+      <p>
+        {{exp.description}}
+
+      </p>
+
+      <div>
+        <div *ngIf="exp.en_cours, else duree">
+          Je travaille sur cette poste depuis le {{exp.date_debut | date: 'dd MMMM yyyy':'':'fr'}}
+        </div>
+        <ng-template #duree>
+          Du {{exp.date_debut | date: 'dd-MMMM-yyyy':'':'fr'}} au {{exp.date_fin | date: 'dd-MMMM-yyyy':'':'fr'}}
+        </ng-template>
+      </div>
+      <div class="p-justify-right">
+        <button pButton pRipple type="button" (click)="modifDialog(exp)" icon="pi pi-pencil" pTooltip="modifier"
+          class="p-button-rounded p-button-warning p-button-text "></button>
+        <button pButton pRipple type="button" (click)="supprimerExperience(exp.id)" icon="pi pi-times"
+          pTooltip="supprimer" class="p-button-rounded p-button-danger p-button-text "></button>
+      </div>
+    </div>
+  </div>
+  <button pButton pRipple type="button" (click)="affichageForm()" label="Ajout d'une experience"
+    *ngIf="!experience.selected" icon="pi pi-plus" class="p-button-text p-button-rounded p-justify-right button-white"></button>
+
+  <!-- FORM AJOUT -->
+  <form *ngIf="(experience.selected)" class="flex-cont blur">
+    <div class="p-fluid p-formgrid p-grid">
+      <div class="p-field p-col-12 p-md-6 flex-container p-justify-between">
+        <div class="size">
+          <div class="p-field p-col-12 p-md-6 margin-top">
+            <div>
+              <label for="nom">Nom de la Société</label>
+              <input id="nom" type="text" pInputText [(ngModel)]="experience.nom_entreprise" name="nom" required
+                #nom="ngModel" [ngClass]="{'ng-dirty': (nom.invalid && submitted) || (nom.dirty && nom.invalid)}">
+              <small class="p-error" *ngIf="(nom.dirty && nom.invalid)">Nom de la société est requis.</small>
+            </div>
+          </div>
+
+          <div class="p-field p-col-12 p-md-6 margin-top">
+            <div>
+              <label for="poste">Poste de travail</label>
+              <input id="poste" type="text" pInputText [(ngModel)]="experience.poste" name="poste" #poste="ngModel"
+                required [ngClass]="{'ng-dirty': (poste.invalid && submitted) || (poste.dirty && poste.invalid)}">
+              <small class="p-error" *ngIf="(poste.dirty && poste.invalid)">Nom de la poste de travail est
+                requis.</small>
+            </div>
+          </div>
+        </div>
+
+        <div class="size margin-top">
+          <label for="desc">Description de l'expérience</label>
+          <textarea id="desc" [rows]="5" [cols]="30" pInputTextarea autoResize="autoResize"
+            [(ngModel)]="experience.description" name="desc" #desc="ngModel"></textarea>
+        </div>
+      </div>
+
+      <div class="p-field-checkbox margin-top">
+        <input type="checkbox" id="en_cours" [(ngModel)]="experience.en_cours" (change)="nullifyDateFin()"
+          [checked]="experience.en_cours" name="en_cours" #en_cours="ngModel" />
+        <label for="en_cours">Je travaille encore sur cette poste.</label>
+      </div>
+
+      <div class="p-field p-col-12 p-md-6 p-justify-between">
+        <div style="width: 50%;">
+          <label for="date_debut">Date début</label>
+          <input #date_debut="ngModel" id="date_debut" name="date_debut" type="date" (change)="checkDate()" required
+            pInputText [(ngModel)]="experience.date_debut"
+            [ngClass]="{'ng-dirty': (date_debut.dirty && date_debut.invalid)}">
+          <small class="p-error" *ngIf="(date_debut.dirty && date_debut.invalid)">date début est requis.</small>
+        </div>
+
+        <div style="width: 49%;" *ngIf="(!experience.en_cours)">
+          <label for="date_fin">Date fin</label>
+          <input #date_fin="ngModel" id="date_fin" name="date_fin" [disabled]="experience.date_debut==null"
+            min="{{experience.date_debut | date: 'yyyy-MM-dd'}}" type="date" required pInputText
+            [(ngModel)]="experience.date_fin" [ngClass]="{'ng-dirty': (date_debut.dirty && date_fin.invalid)}"
+            onkeypress="return false">
+          <small>Appuyez sur l'icône du calendrier à droite</small>
+          <small class="p-error" *ngIf="(date_fin.dirty && date_fin.invalid)">date fin est requis.</small>
+        </div>
+      </div>
+    </div>
+
+    <div class="p-justify-right margin-top">
+      <button pButton pRipple type="button" (click)="ajouterExperience()" label="Confirmer" icon="pi pi-check"
+        [disabled]="nom.invalid || poste.invalid || date_debut.invalid || (experience.en_cours==false && experience.date_fin==null)"
+        class="p-button-text p-button-rounded button-white"></button>
+      <button pButton pRipple type="button" (click)="affichageForm()" label="Annuler" icon="pi pi-times"
+        class="p-button-text p-button-rounded button-white p-button-danger"></button>
+    </div>
+  </form>
+
+  <div class="p-justify-between margin-top">
+    <button pButton pRipple type="button" label="Précédent" (onClick)="previousPage()" icon="pi pi-angle-left" iconPos="left"
+        class="p-button-rounded"></button>
+      <button pButton pRipple type="button" label="Terminer" (onClick)="confirm()" icon="pi pi-check" iconPos="right"
+        class="p-button-rounded"></button>
+  </div>
+
+</div>
