--- a/src/app/pages/table-des-societe/table-des-societe.component.html
+++ b/src/app/pages/table-des-societe/table-des-societe.component.html
@@ -1,61 +1,58 @@
-<p-toast></p-toast>
+<div class="flex-container">
 
-<div class="card">
-<p></p>
-  <p-table #dt [value]="employeurs" [rows]="6" [paginator]="true" [globalFilterFields]="['nom','nom_entreprise','matricule','telephone']"
-           [(selection)]="selectedEmployeur" [rowHover]="true" dataKey="id"
-           currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
-    <ng-template pTemplate="caption">
-      <div class="p-d-flex p-ai-center p-jc-between">
-        <span class="p-input-icon-left">
-                    <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
-                </span>
-      </div>
-    </ng-template>
-    <ng-template pTemplate="header">
-      <tr>
-        <th pSortableColumn="nom_entreprise">Nom de l'entreprise <p-sortIcon field="nom_entreprise"></p-sortIcon></th>
-        <th pSortableColumn="nom">Nom de responsable<p-sortIcon field="nom"></p-sortIcon></th>
-        <th pSortableColumn="matricule">matricule<p-sortIcon field="matricule"></p-sortIcon></th>
-        <th pSortableColumn="telephone">telephone<p-sortIcon field="telephone"></p-sortIcon></th>
-        <th>Valider</th>
-        <th>Suspenser</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-employeur>
-      <tr>
+  <div class="card-single">
+    <p-table #dt [value]="employeurs" [rows]="6" [paginator]="true"
+      [globalFilterFields]="['nom','nom_entreprise','matricule','telephone']" [(selection)]="selectedEmployeur"
+      [rowHover]="true" dataKey="id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+      [showCurrentPageReport]="true">
+      <ng-template pTemplate="caption">
+        <div class="p-d-flex p-ai-center p-jc-between p-rounded">
+          <span class="p-input-icon-left">
+            <i class="pi pi-search"></i>
+            <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
+              placeholder="Search..." />
+          </span>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="nom_entreprise">Nom de l'entreprise <p-sortIcon field="nom_entreprise"></p-sortIcon>
+          </th>
+          <th pSortableColumn="nom">Nom de responsable<p-sortIcon field="nom"></p-sortIcon>
+          </th>
+          <th pSortableColumn="matricule">matricule<p-sortIcon field="matricule"></p-sortIcon>
+          </th>
+          <th pSortableColumn="telephone">telephone<p-sortIcon field="telephone"></p-sortIcon>
+          </th>
+          <th>Validation</th>
+          <th>Activation/Suspension</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-employeur>
+        <tr>
 
-        <td>{{employeur.nom_entreprise}}</td>
-        <td>{{employeur.nom}}</td>
-        <td>{{employeur.matricule}}</td>
-        <td>{{employeur.telephone}}</td>
-        <td>
-          <input type="button" pButton pRipple class="p-button-rounded p-mr-2" (click)="VerifierEmployeur(employeur,employeur.id)" [style.background-color]="employeur.verifie == 1 ? '#1C2C54' : '#7CACDC' "  [value]="employeur.verifie == 1 ? 'verifié' : 'non vérifié' ">
-        </td>
-        <td><input type="button" pButton pRipple class="p-button-rounded  p-mr-2" (click)="ValiderEmployeur(employeur,employeur.id)"  [style.background-color]="employeur.active == 1 ? '#34748C' : '#ACACB4' "  [value]="employeur.active== 1 ? 'active' : 'suspendu' "></td>
+          <td>{{employeur.nom_entreprise}}</td>
+          <td>{{employeur.nom}}</td>
+          <td>{{employeur.matricule}}</td>
+          <td>{{employeur.telephone}}</td>
+          <td>
+            <input type="button" pButton pRipple class="p-button-rounded p-mr-2"
+              (click)="VerifierEmployeur(employeur,employeur.id)"
+              [style.background-color]="employeur.verifie == 1 ? '#1C2C54' : '#7CACDC' "
+              [value]="employeur.verifie == 1 ? 'verifié' : 'non vérifié' ">
+          </td>
+          <td><input type="button" pButton pRipple class="p-button-rounded  p-mr-2"
+              (click)="ValiderEmployeur(employeur,employeur.id)"
+              [style.background-color]="employeur.active == 1 ? '#34748C' : '#ACACB4' "
+              [value]="employeur.active== 1 ? 'active' : 'suspendu' "></td>
 
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="summary">
-      <div class="p-d-flex p-ai-center p-jc-between">
-        In total there are {{employeurs.length }} Employeurs.
-      </div>
-    </ng-template>
-  </p-table>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="summary">
+        <div class="p-d-flex p-ai-center p-jc-between">
+          Au total, il existe {{employeurs.length }} employeurs.
+        </div>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
