--- a/src/app/pages/table-des-societe/table-des-societe.component.scss
+++ b/src/app/pages/table-des-societe/table-des-societe.component.scss
@@ -51,11 +51,39 @@
     }
   }
 
+  .flex-container {
+    width: 80vvw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+  }
+  
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 2rem;
+    margin-top: 1rem;
+  }
+  
+  .card-single {
+    background: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 30px;
+    padding: 2rem;
+    border-radius: 30px;
+  }
+
+  .p-rounded{
+    border-radius: 50px;
+  }
+
   /* Responsive */
   .p-datatable-customers .p-datatable-tbody > tr > td .p-column-title {
     display: none;
   }
 }
+
+
 
 @media screen and (max-width: 960px) {
   :host ::ng-deep {
