--- a/src/app/quizz/quizz.component.html
+++ b/src/app/quizz/quizz.component.html
@@ -1,24 +1,21 @@
 <div class="container">
-  <div *ngIf="prevAnswered.length < 11">
-    <p class="text-center">{{ prevAnswered.length }} of {{ quizzes.length }}</p>
+  <div *ngIf="prevAnswered.length < this.quizzes.length+1">
+    <p class="text-center">{{ prevAnswered.length }} | {{ quizzes.length }}</p>
     <h1>{{ quizzes[currentQuiz].question }}</h1>
 
     <div class="answers" >
-      <ul class="answers__list" *ngFor="let quiz of quizzes[currentQuiz].answer" >
+      <ul class="answers__list" *ngFor="let quiz of quizzes[currentQuiz].reponses" >
         <label><li @answer class="answers__item" appBackground [correctAnswer]="quiz.correct">
           <input  type="radio" name="options" (change)="onAnswer(quiz.correct)" [disabled]="answerSelected">
-          {{ quiz.option }}
+          {{ quiz.reponse }}
         </li></label>
       </ul>
     </div>
-
   </div>
 
 
-  <div *ngIf="prevAnswered.length > 10">
-    <button class="btn" (click)="showResult()" *ngIf="resultStatus === 'Show Result'">{{ resultStatus }}</button>
-    <button class="btn btn--new" (click)="playAgain()" *ngIf="resultStatus !== 'Show Result'">{{ resultStatus }}</button>
-    <div *ngIf="result">
+  <div *ngIf="prevAnswered.length > this.quizzes.length">
+    <div>
       Correct Answers: {{ correctAnswers }} | Inocrrect Answers: {{ incorrectAnswers }}
     </div>
   </div>
