--- a/src/app/pages/gestion-cv/gestion-experience/gestion-experience.component.html
+++ b/src/app/pages/gestion-cv/gestion-experience/gestion-experience.component.html
@@ -176,9 +176,9 @@
   </form>
 
   <div class="p-justify-between margin-top">
-    <button pButton pRipple type="button" label="Précédent" (onClick)="previousPage()" icon="pi pi-angle-left" iconPos="left"
+    <button pButton pRipple type="button" label="Précédent" (click)="previousPage()" icon="pi pi-angle-left" iconPos="left"
         class="p-button-rounded"></button>
-      <button pButton pRipple type="button" label="Terminer" (onClick)="confirm()" icon="pi pi-check" iconPos="right"
+      <button pButton pRipple type="button" label="Terminer" (click)="confirm()" icon="pi pi-check" iconPos="right"
         class="p-button-rounded"></button>
   </div>
 
