--- a/src/app/pages/gestion-cv/gestion-experience/gestion-experience.component.html
+++ b/src/app/pages/gestion-cv/gestion-experience/gestion-experience.component.html
@@ -3,7 +3,7 @@
   <div class="dialog">
     <form>
       <div class="p-fluid p-formgrid p-grid">
-        <div class="p-field p-col-12 p-md-6 flex-cont p-justify-between">
+        <div class="p-field p-col-12 p-md-6 flex-container p-justify-between">
           <div class="size">
             <div class="p-field p-col-12 p-md-6 margin-top">
               <div>
